feat: melhorias em geral

--- a/src/views/pages/pesquisaAvancada.ejs
+++ b/src/views/pages/pesquisaAvancada.ejs
@@ -32,7 +32,7 @@
     }
 
     .w-90 {
-      width: 100px;
+      width: 15%;
       margin-block: 1rem;
     }
   </style>
@@ -87,9 +87,10 @@
                   </div>
               </div>
               <div class="row">
-                <div class="col-md-12 d-flex justify-content-center mt-4"> <button type="button"
-                    class="w-90 btn btn-warning mx-1" id="btn-limpar">Limpar</button> <button type="submit"
-                    class="w-90 btn btn-secondary mx-1" id="btn-pesquisar">Pesquisar</button> </div>
+                <div class="col-md-12 d-flex justify-content-center mt-4">
+                  <button type="button" class="w-90 btn btn-warning mx-1" id="btn-limpar">Limpar</button>
+                  <button type="submit" class="w-90 btn btn-secondary mx-1" id="btn-pesquisar">Pesquisar</button>
+                </div>
               </div>
               </form>
               <div class="row">
