--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -68,7 +68,6 @@
          top: 0;
          width: 100%;
          z-index: 10;
-
          border-bottom: 8px solid orange;
          transform: translateY(-2rem);
 
@@ -184,8 +183,8 @@
       /* Media Query para notebooks */
       @media (max-width: 1920px) {
          .logo {
-               max-width: 25rem;
-               margin-bottom: 1rem;
+               max-width: 20rem;
+               margin-bottom: 0.9rem;
          }
 
          .systems-grid {
@@ -195,9 +194,9 @@
          }
 
          .system-box {
-               min-height: 8.125rem;
-               padding: 0.625rem;
-               font-size: 0.9rem;
+               min-height: 4.125rem;
+               padding: 0.4rem;
+               font-size: 0.7rem;
          }
 
          .system-box i {
@@ -210,15 +209,13 @@
          }
 
          .container-white {
-               padding: 0.5rem;
                transform: translateY(-1.5625rem);
          }
 
          h3 {
-               font-size: 1.6rem;
+               font-size: 1.2rem;
                color: #00621D;
                font-weight: 700;
-               padding-top: 0.2rem;
          }
 
          h4 {
@@ -239,7 +236,52 @@
                position: relative;
          }
       }
+
+      /* @media (max-width: 1366px) {
+         main{
+            height: 50vh;
+            background-color: #0BA23D;
+         }
+      } */
    </style>
+
+   <style>
+   @media (max-width: 1366px) {
+      .logo {
+         max-width: 18rem;
+         margin-bottom: 0.75rem;
+      }
+      .systems-grid {
+         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+         gap: 0.5rem;
+         padding: 1rem;
+      }
+      .system-box {
+         min-height: 3.5rem;
+         padding: 0.3rem;
+         font-size: 0.6rem;
+      }
+      .system-box i {
+         font-size: 1.3rem;
+         margin-bottom: 0.4rem;
+      }
+      .system-box h4 {
+         font-size: 1rem;
+      }
+      .container-white {
+         transform: translateY(-1.25rem);
+      }
+      h3 {
+         font-size: 1rem;
+         color: #00621D;
+         font-weight: 700;
+      }
+      footer h4 {
+         font-size: 1rem;
+      }
+   }
+</style>
+   
 
    <body>
       <header>
@@ -254,7 +296,7 @@
          </div>
       </header>
 
-      <main class=" w-60 caixa-externa border">
+      <main class=" w-60 caixa-externa painel border">
          <div class="systems-grid">
                <!-- Conteúdo dos botões aqui -->
                <a href="/entrada" class="system-box link">
