modificação do çayout do template painel pt-01

--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -93,6 +93,7 @@
                         <option value="lousa">LOUSA</option>
                         <option value="monitor">MONITOR</option>
                         <option value="mobiliário">MOBILIÁRIO EM GERAL</option>
+                        <option value="esportes">ESPORTES</option>
                      </select>
                   </div>
                </div>
