--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -197,6 +197,10 @@
       opacity: 0.7;
    }
 
+   .w-5{
+      width: 5%;
+   }
+
    @media (max-width: 1024) {
       .caixa-externa {
          background-color: #d40a0a;
@@ -226,9 +230,9 @@
          <div class="table-container">
             <div class="search-bar sticky-top">
                <div style="background-color: transparent;" class="d-flex justify-content-end align-items-center mb-2">
-                  <label for="searchTombo" class="me-2 fw-bold">Pesquisar:</label>
+                  <label for="searchTombo" class="me-2 fw-bold ">Pesquisar:</label>
                   <input type="text" id="searchTombo" placeholder="Digite o número do tombo, categoria, descrição, doc de origem ou conservação" style="width: 520px; padding: 5px; border: 1px solid #ccc; border-radius: 4px; margin-right: 10px;">
-                  <button id="clearSearch" class="btn btn-secondary btn-md me-2">Limpar</button>
+                  <button id="clearSearch" class="btn btn-secondary btn-md me-2 w-5">Limpar</button>
                </div>
             </div>
             <table id="estoqueTable" class="table table-striped table-hover mb-0">
