--- a/src/views/pages/qtde_disponivel_por_item.ejs
+++ b/src/views/pages/qtde_disponivel_por_item.ejs
@@ -18,7 +18,7 @@
    }
 
    .table-container {
-      max-height: 65vh;
+      max-height: 75vh;
       overflow-y: auto;
       overflow-x: hidden;
    }
@@ -62,6 +62,11 @@
       width: 90%;
    }
 
+   .w-5 {
+      width: 5%;
+   }
+
+
    /* Ajuste das colunas */
    .table-container th:nth-child(1), /* Descrição */
    .table-container td:nth-child(1) {
@@ -101,7 +106,7 @@
                <div class="d-flex justify-content-end align-items-center mb-2">
                   <label for="searchDescricao" class="me-2 fw-bold">Pesquisar:</label>
                   <input type="text" id="searchDescricao" placeholder="Digite a categoria ou descrição" style="width: 300px; padding: 5px; border: 1px solid #ccc; border-radius: 4px; margin-right: 10px;">
-                  <button id="clearSearch" class="btn btn-secondary btn-md me-2">Limpar</button>
+                  <button id="clearSearch" class="btn btn-secondary btn-md me-2 w-5">Limpar</button>
                </div>
             </div>
             <table class="table table-striped table-hover mb-0">
