--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -29,10 +29,20 @@
           background-color: #f5f5f5;
           overflow-x: hidden;
       }
+
+      h3{
+        font-weight: 700;
+        color: var(--color-primary);
+      }
+
+      h4, h5{
+        color: #fff;
+      }
   
       header {
           width: 100%;
           background: linear-gradient(to right, #00621D, #0BA23D);
+          height: 15vh;
       }
   
       .header-content {
@@ -52,14 +62,18 @@
           border-bottom: 8px solid orange;
           text-align: center;
           margin-bottom: 0.5rem !important;
-          transform: translateY(0.5rem) !important;
-          padding: 0.3rem !important;
+          transform: translateY(1rem) !important;
+          padding-top: 0.8rem !important;
       }
   
       .logo {
-          max-width: 400px !important;
+          max-width: 450px !important;
           margin: 0.25rem auto !important;
           transform: scale(0.9);
+      }
+
+      .caixa-externa-painel{
+        margin-top: 10rem;
       }
   
       main {
@@ -80,7 +94,7 @@
           padding: 1rem;
       }
   
-      .system-box {
+      .system-box, .system-box-sair {
           flex: 0 0 calc(33.333% - 1rem);
           max-width: 260px;
           min-height: 120px;
@@ -115,7 +129,25 @@
           left: 0;
           animation: borderGrow 0.3s ease;
       }
+
+      .system-box-sair:hover {
+          transform: translateY(-5px);
+          box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+          background-color: #f8fff2;
+      }
   
+      .system-box-sair:hover::after {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 3px;
+          background-color: red;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          animation: borderGrow 0.3s ease;
+      }
+
       .system-box i {
           font-size: 1.8rem;
           color: var(--color-primary);
@@ -139,7 +171,7 @@
       }
   
       .logout:hover {
-          background-color: #ffd6d69a !important;
+          background-color: #ffeaea !important;
           border-color: #cc0000 !important;
       }
   
@@ -157,10 +189,16 @@
   
       footer {
           margin-top: auto;
-          background-color: #f8f9fa;
-          border-top: 4px solid #00621D;
+          background: linear-gradient(to right, #00621D, #0BA23D);
+          border-top: 4px solid orange;
           padding: 1.5rem;
           text-align: center;
+          height: 15vh;
+      }
+
+      .footer-content{
+        background-color: transparent;
+        padding-top: 2rem;
       }
   
       @keyframes borderGrow {
@@ -220,7 +258,7 @@
          </div>
       </header>
 
-      <main class=" w-60 caixa-externa painel border">
+      <main class=" w-60 caixa-externa-painel painel border">
          <div class="systems-grid">
                <!-- Conteúdo dos botões aqui -->
                <a href="/entrada" class="system-box link">
@@ -259,7 +297,7 @@
                      <p class="text-success">Pesquisa Avançada</p>
                   </div>
                </a>
-               <a href="/logout" class="system-box logout link ">
+               <a href="/logout" class="system-box-sair logout link ">
                   <div class="log">
                      <i class="fas fa-door-open fs-5 me-1 fa-2x text-danger"></i>
                      <h4 class="text-danger">Sair</h4>
@@ -270,9 +308,9 @@
       </main>
 
       <footer>
-         <div class="footer-content bg-light my-0">
-            <h4 class="m-0 fs-5">COLOG - Comando Logistico da PMCE</h4>
-            <h5 class="m-1 fw-bold ">CEGPA / NUCPA</h5>
+         <div class="footer-content my-0">
+            <h4 class="m-0 fs-5 fw-bold">COLOG - Comando Logistico da PMCE</h4>
+            <h5 class="m-1">CEGPA / NUCPA</h5>
          </div>
       </footer>
 
