--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -27,7 +27,9 @@
           display: flex;
           flex-direction: column;
           background-color: #f5f5f5;
-          overflow-x: hidden;
+          overflow: hidden;
+          margin: 0;
+  
       }
 
       h3{
@@ -42,7 +44,7 @@
       header {
           width: 100%;
           background: linear-gradient(to right, #00621D, #0BA23D);
-          height: 15vh;
+          height: 13vh;
       }
   
       .header-content {
@@ -62,7 +64,7 @@
           border-bottom: 8px solid orange;
           text-align: center;
           margin-bottom: 0.5rem !important;
-          transform: translateY(1rem) !important;
+          transform: translateY(-0.3rem) !important;
           padding-top: 0.8rem !important;
       }
   
@@ -74,10 +76,11 @@
 
       .caixa-externa-painel{
         margin-top: 10rem;
+        width: 50vw;
       }
   
       main {
-          width: 90%;
+          width: 100%;
           max-width: 1200px;
           margin: 2rem auto;
           padding: 1.5rem;
@@ -171,7 +174,7 @@
       }
   
       .logout:hover {
-          background-color: #ffeaea !important;
+          background-color: #fff7f7 !important;
           border-color: #cc0000 !important;
       }
   
@@ -194,6 +197,7 @@
           padding: 1.5rem;
           text-align: center;
           height: 15vh;
+          width: 100%;
       }
 
       .footer-content{
