Ajustes nos layouts dos templates

--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -91,7 +91,7 @@
 
    .table-container th:nth-child(3), /* Descrição */
    .table-container td:nth-child(3) {
-      width: 35%;
+      width: 43%;
    }
 
    .table-container th:nth-child(4), /* Tombo */
@@ -99,20 +99,24 @@
       width: 5%;
    }
 
-
    .table-container th:nth-child(5), /* Destino */
    .table-container td:nth-child(5) {
-      width: 12%;
+      width: 10%;
+   }
+
+   .table-container th:nth-child(6), /* NUP */
+   .table-container td:nth-child(6) {
+      width: 8%;
    }
 
    .table-container th:nth-child(7), /* Termo de entrega */
    .table-container td:nth-child(7) {
-      width: 10%;
+      width: 8%;
    }
 
    .table-container th:nth-child(8), /* Doc de Origem */
    .table-container td:nth-child(8) {
-      width: 8%;
+      width: 5%;
    }
 
    .table-container th:nth-child(9), /* Valor */
@@ -122,7 +126,7 @@
 
    .table-container th:last-child, /* Ações */
    .table-container td:last-child {
-      width: 7%;
+      width: 8%;
    }
 </style>
 
